gitlab-all-in-one-omnibus/dc.gitlab-omnibus.prometheus.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: gitlab-omnibus
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: gitlab
    name: gitlab-omnibus
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      annotations:
        prometheus.io/path: /-/metrics?token=YourMetricsToken
        prometheus.io/port: "80"
        prometheus.io/scrape: "true"
      labels:
        app: gitlab
        name: gitlab-omnibus
    spec:
      containers:
      - image: gitlab/gitlab-ce:latest
        imagePullPolicy: Always
        name: gitlab-omnibus
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 22
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/gitlab
          name: vol-config
        - mountPath: /var/log/gitlab
          name: vol-logs
        - mountPath: /var/opt/gitlab
          name: vol-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: gitlab-any
      serviceAccountName: gitlab-any
      terminationGracePeriodSeconds: 30
      volumes:
      - name: vol-config
        persistentVolumeClaim:
          claimName: gitlab-config
      - name: vol-logs
        persistentVolumeClaim:
          claimName: gitlab-logs
      - name: vol-data
        persistentVolumeClaim:
          claimName: gitlab-data
  test: false
  triggers:
  - type: ConfigChange
